--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.4",
+    "country-state-city": "^3.2.1",
     "datatables.net": "^2.1.6",
     "datatables.net-bs4": "^2.1.6",
     "datatables.net-bs5": "^2.1.6",
