--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
+    "@splidejs/react-splide": "^0.7.12",
+    "@vis.gl/react-google-maps": "^1.3.0",
     "chart.js": "^4.4.4",
     "country-state-city": "^3.2.1",
     "datatables.net": "^2.1.6",
@@ -20,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
     "tailwindcss-animate": "^1.0.7",
@@ -29,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
